@@ -2,6 +2,8 @@
 
 from Products.CMFCore import utils
 import PasswordResetTool
+from zope.i18nmessageid import MessageFactory
+passwordresetMessageFactory = MessageFactory('passwordresettool')
 
 tools = ( PasswordResetTool.PasswordResetTool, )
 
