@@ -1,6 +1,7 @@
 <configure
   xmlns="http://namespaces.zope.org/zope"
   xmlns:cmf="http://namespaces.zope.org/cmf"
+  xmlns:browser="http://namespaces.zope.org/browser"
   xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
   i18n_domain="Products.PasswordResetTool">
 
@@ -16,6 +17,14 @@
       directory="profiles/default"
       description="Extension profile for default PasswordResetTool setup."
       provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+
+  <browser:page
+      name="passwordreset_view"
+      for="*"
+      class=".browser.PasswordResetToolView"
+      allowed_interface=".interfaces.IPasswordResetToolView"
+      permission="zope.Public"
       />
 
 </configure>
