@@ -1,10 +1,11 @@
 <tal:root define="lt string:&lt;;gt string:&gt;;
                   dummy python:request.RESPONSE.setHeader('Content-Type', 'text/plain;; charset=%s' % options['charset']);
                   member python:options['member'];
+                  view context/@@passwordreset_view;
                   reset python:options['reset']"
->From: "<span tal:replace="python:here.email_from_name" />" <span tal:replace="structure lt"/><span tal:replace="python:here.email_from_address" /><span tal:replace="structure gt"/>
+>From: <span tal:replace="structure view/encoded_mail_sender" />
 To: <span tal:replace="python:member.getProperty('email')" />
-Subject: <span i18n:domain="passwordresettool" i18n:translate="mailtemplate_subject_resetpasswordrequest" tal:omit-tag="">Password reset request</span>
+Subject: <span tal:replace="view/encoded_mail_password_subject" />
 Precedence: bulk
 
 <div i18n:domain="passwordresettool"
