@@ -2,10 +2,11 @@
                   dummy python:request.RESPONSE.setHeader('Content-Type', 'text/plain;; charset=%s' % here.plone_utils.getSiteEncoding());
                   member python:options['member'];
                   portal_properties context/@@plone_tools/properties;
+                  view context/@@passwordreset_view;
                   reset python:options.get('reset', None) or here.portal_password_reset.requestReset(member.getId())"
->From: "<span tal:replace="python:here.email_from_name" />" <span tal:replace="structure lt"/><span tal:replace="python:here.email_from_address" /><span tal:replace="structure gt"/>
+>From: <span tal:replace="structure view/encoded_mail_sender" />
 To: <span tal:replace="python:member.getProperty('email')" />
-Subject: <span i18n:domain="passwordresettool" i18n:translate="mailtemplate_user_account_info" tal:omit-tag="">User Account Information for <span i18n:name="portal_name" tal:omit-tag="" tal:content="python:here.portal_url.getPortalObject().Title()" /></span>
+Subject: <span tal:replace="view/encoded_registered_notify_subject" />
 Precedence: bulk
 
 <div i18n:domain="passwordresettool"
